[package]
name = "perflogtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
time = { version = "0.3", features = ["macros"] }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_System_Performance",
    "Win32_Foundation"
]
